Fix Formable pages design glitch on mobile devices

--- a/app/styles/pages/_formable-page.scss
+++ b/app/styles/pages/_formable-page.scss
@@ -23,6 +23,7 @@
     background-color: #FFFFFF;
     padding: 15px;
     outline: none;
+    width: 100%;
 
     &:active,
     &:focus {
